fix(it): enable streaming right fitting experiment for streaming pipeline tests